Add button and Info Hiring

--- a/team.html
+++ b/team.html
@@ -58,6 +58,13 @@
 						<h2 class="twelvecol title">Our Team</h2>
 					</div>
 				</section>
+				<a href="#hiring">
+					<section class="wrap-mini wrap-gray container buttonHiring" style="background-color: #E2E8E8;padding: 10px 0px;">
+						<div class="row">
+							<h2 class="twelvecol title" style="font-size: 18px; text-align: center;">Now hiring a Managing Director</h2>
+						</div>
+					</section>
+                </a>
 				<section class="wrap-mini container">
 					<div class="row">
 						<div class="sixcol center">
@@ -140,6 +147,89 @@
 						</div>
 					</div>
 				</section>
+				<section class="wrap-mini container" id="hiring">
+                    <div class="row">
+                        <div style="padding-bottom: 30px;"><hr style="background-color: #f2f2f2; height: 3px;"></div>
+                        <div class="twelvecol hiringInfo">
+                            <div>
+                                <span><strong>Position:</strong> Managing Director</span><br>
+                                <span><strong>Location:</strong> New York City</span><br>
+                                <span><strong>Organization:</strong> Coderise</span><br>
+                                <span><strong>Compensation:</strong> Full-time paid position; Position open immediately</span>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 25px;margin: 20px 0px;">ABOUT CODERISE</h2>
+                                <span style="font-size: 16px;">Launched in Spring 2012, Coderise is an international nonprofit organization working to empower kids from developing nations by teaching them how to build great web applications. With support from multinational strongholds including Socialatom, Intergrupo, and Github, Coderise programs work to inspire and equip high school kids with the skills and resources to jumpstart their interest in the technology and programming sectors.</span>
+                                <br>
+                                <span style="font-size: 16px;">Together with leading educators, engineers, and entrepreneurs, Coderise has developed a new model for engaging students with the programming basics necessary to build globally competitive software applications, pairing intensive instruction in Javascript, HTML5 and CSS with high-touch mentorship led by the industry's top developers and entrepreneurs. Coderise empowered high school students from 11 different schools and 5 metropolitan districts of Medellín, Colombia in its inaugural program and will launch in cities across the country in 2014.</span>
+                                <br>
+                                <span style="font-size: 16px;">We are a small, dynamic group of individuals passionate about changing the world. We thrive on working in a collaborative, fast-paced environment. We represent a diversity of backgrounds, a wealth of experience, and a ton of fun. Our team is spread throughout Colombia and New York.</span>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 25px;margin: 20px 0px;">POSITION</h2>
+                                <span style="font-size: 16px;">Coderise is searching for a strategic, results-oriented Managing Director to lead its program expansion to markets across Latin America in 2014. S/he will be responsible for ensuring operational efficiency and programmatic success as the organization enters a period of fast-paced growth. S/he is tasked with the streamlining the delivery of Coderise programs as well as business development for the organization. The ideal candidate has superior business relations skills and is an excellent manager with proven experience scaling programming and operations in a metrics-driven environment.</span>
+                                <br>
+                                <span style="font-size: 16px;">In this newly established role, the Managing Director will report to the Board of Advisors and manage a growing team of program staff. The successful candidate has 5-10 years of experience, with at least two years in a senior management role.</span>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 25px;margin: 20px 0px;">RESPONSIBILITIES</h2>
+                                <span style="font-size: 16px;">Working closely with the Executive Director, the Managing Director is responsible for the timely and successful execution of the following:</span><br>
+                                <span><strong>Staff Development and Management:</strong></span>
+                                <ul style="list-style: circle inside; padding-left: 30px; font-size: 16px;">
+                                    <li>Develop and implement day-to-day operational structure, accountability framework and reporting procedures to ensure successful program delivery</li>
+                                    <li>Recruit and oversee training and orientation of program team; implement a professional development program to train and support all program staff</li>
+                                    <li>Develop performance metrics to ensure consistent, high-quality work product of program staff; manage evaluation and goal setting for all employees and programs</li>
+                                </ul>
+                                <span><strong>Program Operational Management:</strong></span>
+                                <ul style="list-style: circle inside; padding-left: 30px; font-size: 16px;">
+                                    <li>Work with the Board of Directors to fundraise and make the organization financially sustainable</li>
+                                    <li>Develop, direct, and deliver successful Coderise programs, launching 2-4 programs in 2014</li>
+                                    <li>Build and train a team to support program delivery and execution, including distributed teams responsible for programmatic success</li>
+                                    <li>Develop framework for program evaluation, ensuring programmatic success, long-term effectiveness and organizational efficiency at scale</li>
+                                    <li>Develop and refine program models to meet short- and long-term goals for scale and efficacy</li>
+                                </ul>
+                                <span><strong>Leadership:</strong></span>
+                                <ul style="list-style: circle inside; padding-left: 30px; font-size: 16px;">
+                                    <li>Manage relationships with key stakeholders, funders and partners to provide sufficient resources, space and services to support program delivery</li>
+                                    <li>Cultivate relationships to ensure partner satisfaction and continued investments in Coderise programs</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 25px;margin: 20px 0px;">QUALIFICATIONS</h2>
+                                <span style="font-size: 16px;">This is an extraordinary opportunity to be part of a small, talented and growing team of individuals in a dynamic startup environment. The position offers potential for growth and affords great opportunity to have a tangible impact on communities across the country.</span><br>
+                                <span><strong>Requirements include:</strong></span>
+                                <ul style="list-style: circle inside; padding-left: 30px; font-size: 16px;">
+                                    <li>Minimum of a BA, MA preferred</li>
+                                    <li>At least 5 years of related work experience (youth/technology/international non-profits, resource development) preferably two years in a senior management role</li>
+                                    <li>At least partial exposure and understanding of software development and tech startup industry</li>
+                                    <li>Demonstrated project management skills; ability to execute complex projects with multiple stakeholders resulting in measurable growth and success</li>
+                                    <li>Proven experience successfully operationalizing programs, developing and evaluating program models</li>
+                                    <li>Strength in recruiting, hiring, managing, coaching, and retaining individuals and teams, including effective management of distributed teams</li>
+                                    <li>Demonstrated results in building partnerships and managing needs of key stakeholders, evaluating success and effectiveness of partnerships</li>
+                                    <li>Excited by opportunity to cultivate organizational culture and values, help shape program growth</li>
+                                    <li>Ability to thrive in a high-performance startup environment; proven ability to work well under pressure and adapt quickly to change</li>
+                                    <li>Excellent verbal and written communication skills in english and spanish with exceptional attention to details</li>
+                                    <li>Integrity, credibility, and a demonstrated commitment to Coderise’s mission</li>
+                                </ul>
+                                <span><strong>Other desired skills:</strong></span>
+                                <ul style="list-style: circle inside; padding-left: 30px; font-size: 16px;">
+                                    <li>Rapid learner</li>
+                                    <li>Field experience in developing countries, especially Colombia or Latin America</li>
+                                    <li>Demonstrated passion for development issues</li>
+                                    <li>Demonstrated passion in tech startup community</li>
+                                </ul>
+                                <span><strong>Recruitment Process</strong></span><br>
+                                <span style="font-size: 16px;">Interested candidates should email Andrea Cornejo (andrea@coderise.org) with “Managing Director”  in the subject line, attaching a resume cover letter, and two references before January 17th, 2014.</span><br>
+                                <span><strong>Compensation</strong></span><br>
+                                <span style="font-size: 16px;">Position open immediately. Salary commensurate with experience.</span>
+                            </div>
+                            <div style="padding: 30px 0px;"><hr style="background-color: #f2f2f2; height: 3px;"></div>
+                            <div style="margin: 10px 50px; padding-left: 15px; border-left: 3px solid #f2f2f2;">
+                                <quote style="font-size:16px;"><i>“It's nice to think that the existence of the Internet means that anyone with a computer and access to the web can become a success through sheer will power and hard work. Reality is not quite so simple. Coderise recognizes that educational opportunities and exposure to positive role models play a critical role in every software developer's life. Combine my interest in tech entrepreneurship with my wife Theresa's anthropological research into economic opportunity in Latin America, and its easy to see why backing Coderise is the perfect way for our family to give back.”</i><br><strong>Tom Preston, CEO Github</strong></quote>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
