Update location and Sandra biography

--- a/team.html
+++ b/team.html
@@ -133,7 +133,7 @@
 							<article>
 								<img src="images/sandrazuniga.png" class="thumbs"/>
 								<h6>Sandra Zuniga Guzman - Community Manager / Directora de Comunidad</h6>
-								<p>I am an enterprising young 21-year-old with a love for raising human capital and a deep interest in social justice, politics, community engagement, international development, and social enterprise.</p>
+								<p>Sandra is an enterprising 23-year-old with a deep interest in social justice and community engagement. She has acted as a National Ambassador for the Youth Leadership Institute, is transitioning from Programs Director for the International Youth Council - USA chapter to Project Manager for the global organization, and supports  many efforts to champion youth-led development. She is pursuing an MA in International Relations at the Johns Hopkins Paul H. Nitze School of Advanced International Studies.</p>
 								<p><a class="link" href="mailto:sandra.zunigaguzman@gmail.com">sandra.zunigaguzman@gmail.com</a></p>
 							</article>
 						</div>
@@ -153,7 +153,7 @@
                         <div class="twelvecol hiringInfo">
                             <div>
                                 <span><strong>Position:</strong> Managing Director</span><br>
-                                <span><strong>Location:</strong> New York City</span><br>
+                                <span><strong>Location:</strong> Bogotá, Colombia</span><br>
                                 <span><strong>Organization:</strong> Coderise</span><br>
                                 <span><strong>Compensation:</strong> Full-time paid position; Position open immediately</span>
                             </div>
