Add Form to Apply and Aplica pages

--- a/apply.html
+++ b/apply.html
@@ -68,7 +68,28 @@
 							<br>
 							<p>Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
 							<br>
+							<div id="wufoo-s16nne201u5s83l">
+							Fill out my <a href="https://coderise.wufoo.com/forms/s16nne201u5s83l">online form</a>.
+							</div>
+							<script type="text/javascript">var s16nne201u5s83l;(function(d, t) {
+							var s = d.createElement(t), options = {
+							'userName':'coderise', 
+							'formHash':'s16nne201u5s83l', 
+							'autoResize':true,
+							'height':'4534',
+							'async':true,
+							'host':'wufoo.com',
+							'header':'show', 
+							'ssl':true};
+							s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+							s.onload = s.onreadystatechange = function() {
+							var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+							try { s16nne201u5s83l = new WufooForm();s16nne201u5s83l.initialize(options);s16nne201u5s83l.display(); } catch (e) {}};
+							var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+							})(document, 'script');</script>
+							<!--
 							<h6>Applications will be open soon!</h6>
+							-->
 							<!--
 							<p class="colorGreen">¡Inscríbase ya!</p>
 
