Edit How, Como, Apply and Aplica Pages

--- a/aplica.html
+++ b/aplica.html
@@ -65,9 +65,16 @@
 						<div class="twelvecol">
 							<h5>¿Quién puede aplicar a Coderise 2013?</h5>
 							<p>Coderise busca jóvenes apasionados por aprender y curiosos sobre tecnología y desarrollo de software.</p>
-							<br>
 							<p>Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá.</p>
+							<p>Jóvenes interesados en aplicar deben de revisar el calendario de fechas de clase y asegurar que puedan cumplir con todas las clases.</p>
 							<br>
+							<p>Itinerario Coderise Medelllin 2014</p>
+							<figure>
+								<img src="images/Coderise-Schedule-Medellin-2014.jpg" alt="Itinerario">
+							</figure>
+							<br>
+							<h6>Inscripciones para Coderise 2014 Medellín estan abiertas!</h6>
+						<!-- Form Init -->
 							<div id="wufoo-s16nne201u5s83l">
 							Fill out my <a href="https://coderise.wufoo.com/forms/s16nne201u5s83l">online form</a>.
 							</div>
@@ -87,9 +94,7 @@
 							try { s16nne201u5s83l = new WufooForm();s16nne201u5s83l.initialize(options);s16nne201u5s83l.display(); } catch (e) {}};
 							var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 							})(document, 'script');</script>
-							<!--
-							<h6>Inscripciones comienzan muy pronto!</h6>
-							-->
+						<!-- Form End -->
 							<!--
 							<p class="colorGreen">¡Inscríbase ya!</p>
 
