--- a/apply.html
+++ b/apply.html
@@ -65,9 +65,11 @@
 						<div class="twelvecol">
 							<h5>Who can apply for Coderise 2013?</h5>
 							<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.</p>
+							<p>Students in the last three years of high school and living in the metropolitan area of Medellin, Colombia, are elegible to apply for Coderise 2014.</p>
+							<h6>Applications are now open!</h6>
+							<a class="link" href="aplica.html"><p>[Go to Spanish page to Apply]</p></a>
 							<br>
-							<p>Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
-							<br>
+							<!--
 							<div id="wufoo-s16nne201u5s83l">
 							Fill out my <a href="https://coderise.wufoo.com/forms/s16nne201u5s83l">online form</a>.
 							</div>
@@ -87,6 +89,7 @@
 							try { s16nne201u5s83l = new WufooForm();s16nne201u5s83l.initialize(options);s16nne201u5s83l.display(); } catch (e) {}};
 							var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 							})(document, 'script');</script>
+							-->
 							<!--
 							<h6>Applications will be open soon!</h6>
 							-->
