--- a/como.html
+++ b/como.html
@@ -122,7 +122,8 @@
 							<h4>Itinerario de Programa Coderise</h4>
 						</div>
 						<div class="ninecol last">
-							<p>El programa de Coderise dura 9 semanas, y usualmente se desarrolla Martes y Jueves después del colegio de 5:00 a 8:00 p.m., y Sábados de 9:00 a.m. a 1:00 p.m. El itinerario para Medellín y Bogotá 2013 será publicado en Abril 20.</p>
+							<p>El programa de Coderise dura 9 semanas, y usualmente se desarrolla Martes y Jueves después del colegio de 5:00 a 8:00 p.m., y Sábados de 9:00 a.m. a 2:00 p.m. El calendario de fechas de clases se encuentra en la pagina de aplicación.</p>
+							<a class="link" href="aplica.html">[Conoce el itinerario de Coderise aquí]</a>
 						</div>
 					</div>
 				</section>
