--- a/how.html
+++ b/how.html
@@ -121,7 +121,7 @@
 							<h4>Coderise Program Calendar Dates</h4>
 						</div>
 						<div class="ninecol last">
-							<p>The Coderise program spans 9 weeks, and usually takes place Tuesdays and Thusdays afterschool from 5:00 to 8:00 p.m., and Saturday mornings from 9:00 a.m. to 1:00 p.m. Calendar dates for Coderise Medellín and Bogotá 2013 will be released on April 20th.</p>
+							<p>The Coderise program spans 9 weeks, and usually takes place Tuesdays and Thusdays afterschool from 5:00 to 8:00 p.m., and Saturday mornings from 9:00 a.m. to 2:00 p.m.</p>
 						</div>
 					</div>
 				</section>
