Edit Who, Como, Apply and Aplica Pages + Add Form to convocatory

--- a/aplica.html
+++ b/aplica.html
@@ -65,10 +65,12 @@
 						<div class="twelvecol">
 							<h5>¿Quién puede aplicar a Coderise 2013?</h5>
 							<p>Coderise busca jóvenes apasionados por aprender y curiosos sobre tecnología y desarrollo de software.</p>
+							<br>
 							<p>Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá.</p>
+							<br>
 							<p>Jóvenes interesados en aplicar deben de revisar el calendario de fechas de clase y asegurar que puedan cumplir con todas las clases.</p>
 							<br>
-							<p>Itinerario Coderise Medelllin 2014</p>
+							<h6>Itinerario Coderise Medelllin 2014</h6>
 							<figure>
 								<img src="images/Coderise-Schedule-Medellin-2014.jpg" alt="Itinerario">
 							</figure>
