Delete 'Bogota' text from aplica page

--- a/aplica.html
+++ b/aplica.html
@@ -66,7 +66,7 @@
 							<h5>¿Quién puede aplicar a Coderise 2014?</h5>
 							<p>Coderise busca jóvenes apasionados por aprender y curiosos sobre tecnología y desarrollo de software.</p>
 							<br>
-							<p>Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá.</p>
+							<p>Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín.</p>
 							<br>
 							<p>Jóvenes interesados en aplicar deben de revisar el calendario de fechas de clase y asegurar que puedan cumplir con todas las clases.</p>
 							<br>
