Remove Convocatory Form

--- a/aplica.html
+++ b/aplica.html
@@ -75,74 +75,7 @@
 								<img src="images/Coderise-Schedule-Medellin-2014.jpg" alt="Itinerario">
 							</figure>
 							<br>
-							<h6>Inscripciones para Coderise 2014 Medellín estan abiertas!</h6>
-						<!-- Form Init -->
-							<div id="wufoo-s16nne201u5s83l">
-							Fill out my <a href="https://coderise.wufoo.com/forms/s16nne201u5s83l">online form</a>.
-							</div>
-							<script type="text/javascript">var s16nne201u5s83l;(function(d, t) {
-							var s = d.createElement(t), options = {
-							'userName':'coderise', 
-							'formHash':'s16nne201u5s83l', 
-							'autoResize':true,
-							'height':'4534',
-							'async':true,
-							'host':'wufoo.com',
-							'header':'show', 
-							'ssl':true};
-							s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
-							s.onload = s.onreadystatechange = function() {
-							var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-							try { s16nne201u5s83l = new WufooForm();s16nne201u5s83l.initialize(options);s16nne201u5s83l.display(); } catch (e) {}};
-							var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-							})(document, 'script');</script>
-						<!-- Form End -->
-							<!--
-							<p class="colorGreen">¡Inscríbase ya!</p>
-
-							<p>Coderise está desde ya aceptando inscripciones para el primer programa piloto en Medellín. La convocatoria finalizará el 21 de Septiembre, las clases empezarán el 9 de octubre y serán dictadas en las instalaciones de Intergrupo. Para inscribirte solo debes diligenciar el formulario que se encuentra al final de esta página. La información que nos proveas será analizada por nuestro equipo humano de Coderise y en caso de ser elegido, serás llamado para una entrevista.</p>
-
-
-							<p>Aquí te dejamos algunas pautas que te ayudarán a completar tu formulario de la mejor manera posible:</p>
-
-							<ul>
-
-								<li>Tómate el tiempo necesario para pensar bien tus respuestas</li>
-								<li>Sé sincero</li>
-								<li>Anota las respuestas primero en un documento separado. Una vez las hayas completado todas, cópialas y pégalas en el formulario de nuestro sitio web. Esto es para prevenir que por algún motivo técnico se pierdan las respuestas antes de enviar la aplicación.</li>
-
-							</ul>
-							</article>
-							<section class="contact">
-								<p><b>Si tienes alguna pregunta, escríbenos a <a href="mailto:equipo@coderise.org">equipo@coderise.org.</a></b></p>
-							</section>
-							<article class="full-width">
-								<p class="colorGreen">Programación</p>
-
-								<ul>
-									<li> <span class="colorGreen">27 de agosto: </span> Lanzamiento de convocatoria a jóvenes (ya pueden inscribirse)</li>
-									<li> <span class="colorGreen">21 de septiembre: </span> Conclusión de convocatoria</li>
-									<li> <span class="colorGreen">21 de septiembre: </span> Ultimo dia para determinar quien va a la segunda ronda de entrevistas</li>
-									<li> <span class="colorGreen">21-28 de septiembre: </span> Entrevistas a los finalistas</li>
-									<li> <span class="colorGreen">1 de octubre: </span> Resultados de los 20 aceptados</li>
-									<li> <span class="colorGreen">9 de octubre: </span> Primer dia de clases</li>
-									<li> <span class="colorGreen">1 de diciembre: </span> Último dia de clases. Sujeto a re-ajustes.</li>
-								</ul>
-
-								<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-							</article>				
-							<div class="clearfix"></div>
-							
-							<section class="apply-forms">
-								<article>
-									<a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Formulario de Aplicación</a>
-								</article>
-								<br/>
-								<iframe height="3115" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="http://coderise.wufoo.com.mx/embed/z7x3p9/"><a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Fill out my Wufoo form!</a></iframe>
-								<div class="clearfix"></div>
-
-							</section>
-							-->
+							<h6>Las inscripciones para Coderise 2014 Medellín ya han terminado</h6>
 						</div>
 					</div>
 				</section>
