Update copy, description and profile

--- a/apoya.html
+++ b/apoya.html
@@ -74,9 +74,9 @@
 							<div id="description">
 								<h5>More about what Coderise will do</h5>
 								<p>We have a hunch that by creating a space where kids gain the tools and connections necessary to launch into the field of programming web applications, in the long run -- kids are going to be inspired to use their creativity for anything from creating great products, to solving local community issues through technology to taking charge of their destiny.</p>
-								<p>In terms of tools, we mean the basic concepts any good programmer needs to create great web applications:  HTML, some CSS and Javascript and some Ruby.  In addition, we're going to get them acquainted with Github, Heroku, how to search for code  on the web -- all key tools for getting the job done.  How basic these concepts are over others is arguable.  What we REALLY want to teach is HOW to learn.</p>
+								<p>In terms of tools, we mean the basic concepts any good programmer needs to create great web applications:  HTML, some CSS and Javascript and electronics with Arduino and Node.js.  In addition, we're going to get them acquainted with Github, Heroku, how to search for code  on the web -- all key tools for getting the job done.  How basic these concepts are over others is arguable.  What we REALLY want to teach is HOW to learn.</p>
 								<p>In terms of connections, we mean the necessay exchange of past experiences from people already out there launching a startup that is filling a global social need.  To empower youth that likely don't know much about the programming and tech start up scene, to meet people like @AndresBarreto from Onswipe,  Alex Torrenegra (@Torrenegra) and our other tech entrepreneurs is essential to accompany tools with a vision. </p>
-								<p>We plan to do all of this in two months in EAFIT, the top university in Medellin, three times a week, covering transport and food for all participants and speakers that come all the way out to Medellín for the program.</p>
+								<p>We plan to do all of this in two months in Vive Lab at Ruta N, the main innovation center in Medellin, three times a week, covering transport and food for all participants and speakers that come all the way out to Medellín for the program.</p>
 							</div>
 						</div>
 						<div class="fourcol last perks">
