--- a/como.html
+++ b/como.html
@@ -80,7 +80,7 @@
 							<p>Al finalizar el programa los coderisers estarán en capacidad de:</p>
 							</br>
 							<ul class="square">
-								<li><p>Reconocer y entender tecnologías para el desarrollo de aplicaciones web tales como HTML, CSS, Javascript, Ruby on Rails y bases de datos.</p></li>
+								<li><p>Reconocer y entender tecnologías para el desarrollo de aplicaciones web tales como HTML, CSS, Javascript, Node.js y bases de datos.</p></li>
 								<li><p>Explicar y enseñar conceptos aprendidos a otros estudiantes</p></li>
 								<li><p>Aprender a aprender</p></li>
 								<li><p>Entender  que el fracaso hace parte del proceso de aprendizaje</li>
@@ -112,7 +112,7 @@
 							<h4>Mentores de Coderise</h4>
 						</div>
 						<div class="ninecol last">
-							<p>Cada Sábado, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.  Estos contarán sus experiencias, hablarán de su trayecto como profesionales y estarán abiertos a preguntas de los coderisers. <a class="link" href="mentors.html">[Conoce más de los mentores de Coderise aquí]</a></p>
+							<p>Cada Domingo, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.  Estos contarán sus experiencias, hablarán de su trayecto como profesionales y estarán abiertos a preguntas de los coderisers. <a class="link" href="mentors.html">[Conoce más de los mentores de Coderise aquí]</a></p>
 						</div>
 					</div>
 				</section>
@@ -122,7 +122,7 @@
 							<h4>Itinerario de Programa Coderise</h4>
 						</div>
 						<div class="ninecol last">
-							<p>El programa de Coderise dura 9 semanas, y usualmente se desarrolla Martes y Jueves después del colegio de 5:00 a 8:00 p.m., y Sábados de 9:00 a.m. a 2:00 p.m. El calendario de fechas de clases se encuentra en la pagina de aplicación.</p>
+							<p>El programa de Coderise dura 9 semanas, y usualmente se desarrolla Martes y Jueves después del colegio de 5:00 a 8:00 p.m., y Domingos de 9:00 a.m. a 2:00 p.m. El calendario de fechas de clases se encuentra en la pagina de aplicación.</p>
 							<a class="link" href="aplica.html">[Conoce el itinerario de Coderise aquí]</a>
 						</div>
 					</div>
