--- a/equipo.html
+++ b/equipo.html
@@ -102,19 +102,11 @@
 				</section>
 				<section class="wrap-mini container">
 					<div class="row">
-						<div class="sixcol center">
-							<article>
-								<img src="images/jhon.png" class="thumbs"/>
-								<h6>Jhon Jaiver Lopez Calderon / Instructor</h6>
-								<p>Software Developer with over 5 years of experience in Enterprise Java Applications, Web Development and Mobile Applications. Currently building Mobile strategies at Intergrupo.</p>
-								<p><a class="link" href="mailto:jaiversin@gmail.com">jaiversin@gmail.com</a></p>
-							</article>
-						</div>
-						<div class="sixcol center last">
+					<div class="sixcol center last">
 							<article>
 								<img src="images/julian-david-duque.jpg" class="thumbs"/>
-								<h6>Julian Duque / Instructor</h6>
-								<p>Telecommunications Engineer and Software Development Specialist with 5+ years of experience in mobile and web development with open source tools and agile techniques.</p>
+								<h6>Julián Duque / Lead Instructor</h6>
+								<p>Developer by Passion, Engineer at Nodejitsu, Co-Organizer of MedellínJS and JSConf Colombia</p>
 								<p><a class="link" href="mailto:julianduquej@gmail.com">julianduquej@gmail.com</a></p>
 							</article>
 						</div>
