--- a/how.html
+++ b/how.html
@@ -80,7 +80,7 @@
 							<p>At the end of the program, Coderisers are able to:</p>
 							</br>
 							<ul class="square">
-								<li><p>Identify and understand web technologies such as HTML, CSS, Javascript, Ruby on Rails, and databases</p></li>
+								<li><p>Identify and understand web technologies such as HTML, CSS, Javascript, Node.js, and databases</p></li>
 								<li><p>Explain and teach other students what they have learned</p></li>
 								<li><p>Know how to learn</p></li>
 								<li><p>Understand that failure is part of the learning process</li>
@@ -111,7 +111,7 @@
 							<h4>Mentors of Coderise</h4>
 						</div>
 						<div class="ninecol last">
-							<p>Each Saturday, there will be fireside chats with various Coderise mentors, successful professionals from the tech world.  These will share their experiences, their trajectory throughout various initiatives, and will be able to talk one-on-one with Coderise students.  <a  class="link" href="mentors.html">[Read a bit more on mentors here.]</a></p>
+							<p>Each Sunday, there will be fireside chats with various Coderise mentors, successful professionals from the tech world.  These will share their experiences, their trajectory throughout various initiatives, and will be able to talk one-on-one with Coderise students.  <a  class="link" href="mentors.html">[Read a bit more on mentors here.]</a></p>
 						</div>
 					</div>
 				</section>
@@ -121,7 +121,7 @@
 							<h4>Coderise Program Calendar Dates</h4>
 						</div>
 						<div class="ninecol last">
-							<p>The Coderise program spans 9 weeks, and usually takes place Tuesdays and Thusdays afterschool from 5:00 to 8:00 p.m., and Saturday mornings from 9:00 a.m. to 2:00 p.m.</p>
+							<p>The Coderise program spans 9 weeks, and usually takes place Tuesdays and Thusdays afterschool from 5:00 to 8:00 p.m., and Sunday mornings from 9:00 a.m. to 2:00 p.m.</p>
 						</div>
 					</div>
 				</section>
