Update profile title

--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
 						<div class="sixcol last center">
 							<article>
 								<img src="images/jeffrey.jpg" class="thumbs"/>
-								<h6>Jeffrey Biles</h6>
+								<h6>Jeffrey Biles / Curriculum Advisor</h6>
 								<p>Jeffrey Biles is the head of <a class="link" href="http://staunchrobots.com/">Staunch Robot's</a> educational outreach program and is creating curriculum for Coderise.  He loves finding fun new ways to communicate technical subjects and spread the joy of creation through programming.  Check out his work <a class="link" href="http://jeffreybiles.com/">here</a> and <a class="link" href="http://staunchrobots.com/learn">here.</a></p>
 								<p><a class="link" href="mailto:bilesjeffrey@gmail.com">bilesjeffrey@gmail.com</a></p>
 							</article>
