Add Elizabeth and Adrian to team and equipo pages

--- a/equipo.html
+++ b/equipo.html
@@ -140,6 +140,26 @@
 						</div>
 					</div>
 				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="sixcol center">
+							<article>
+								<img src="images/elizabeth_ramirez.png" class="thumbs"/>
+								<h6>Elizabeth Ramirez / Developer</h6>
+								<p>Ingeniera de Software para búsquedas, archivos y semántica de The New York Times. Trabajando en proyectos relacionados con el Aprendizaje Automático y el Procesamiento del Lenguaje Natural. Apasionada por la Física de Partículas y Computación Científica en Python.</p>
+								<p><a class="link" href="mailto:eramirem@gmail.com">eramirem@gmail.com</a></p>
+							</article>
+						</div>
+						<div class="sixcol center last">
+							<article>
+								<img src="images/adrian-estrada.jpg" class="thumbs"/>
+								<h6>Adrian Estrada / Instructor</h6>
+								<p>Sazonado desarrollador con más de 12 años de experiencia con múltiples lenguajes de programación, actualmente trabajando como desarrollador senior de Wedlinkmedia, Co-Organizador de MedellínJS.</p>
+								<p><a class="link" href="mailto:edsadr@gmail.com">edsadr@gmail.com</a></p>
+							</article>
+						</div>
+					</div>
+				</section>
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
