--- a/team.html
+++ b/team.html
@@ -147,6 +147,26 @@
 						</div>
 					</div>
 				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="sixcol center">
+							<article>
+								<img src="images/elizabeth_ramirez.png" class="thumbs"/>
+								<h6>Elizabeth Ramirez / Developer</h6>
+								<p>Software Engineer for Search, Archive and Semantics at The New York Times. Working in projects related with Machine Learning and Natural Language Processing. Passionate about Particle Physics and Scientific Computing in Python.</p>
+								<p><a class="link" href="mailto:eramirem@gmail.com">eramirem@gmail.com</a></p>
+							</article>
+						</div>
+						<div class="sixcol center last">
+							<article>
+								<img src="images/adrian-estrada.jpg" class="thumbs"/>
+								<h6>Adrian Estrada / Instructor</h6>
+								<p>Seasoned developer with over of 12 years of experience with multiple programming languages, currently working as a senior developer at Wedlinkmedia, Co-Organizer of MedellínJS.</p>
+								<p><a class="link" href="mailto:edsadr@gmail.com">edsadr@gmail.com</a></p>
+							</article>
+						</div>
+					</div>
+				</section>
 				<section class="wrap-mini container" id="hiring">
                     <div class="row">
                         <div style="padding-bottom: 30px;"><hr style="background-color: #f2f2f2; height: 3px;"></div>
